added sections to main document

--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -99,16 +99,34 @@
 % The first character should be within \initial{}
 \initial{P}\textbf{lanning and Scheduling mid semester summary in preparation of exam}
 
-
+\section{Introduction}
 \input{sections/introduction}
+
+\section{Search and Complexity}
 \input{sections/search_and_complexity}
+
+\section{Logic and Inference}
 \input{sections/logic_and_inference}
+
+\section{Representing Plans}
 \input{sections/representing_plans}
+
+\section{Complexity of Classical Planning}
 \input{sections/complexity_classical_planning}
+
+\section{State Space Planning}
 \input{sections/state_space_planning}
+
+\section{Plan Space Planning}
 \input{sections/plan_space_planning}
+
+\section{Graph Based Planning}
 \input{sections/graph_based_planning}
+
+\section{Satisfiability Based Planning}
 \input{sections/satisfiability_based_planning}
+
+\section{Hierarchical Task Network Planning}
 \input{sections/hierarchical_task_network_planning}
 
 
