added some final lecture notes. Alex, please discuss first line with me

--- a/summary/sections/representing_plans.tex
+++ b/summary/sections/representing_plans.tex
@@ -15,11 +15,12 @@
 	\begin{itemize}
 	\item (name, precond, effects)
 	\item $take(k,l,c,d,p) \\ precond: belong(k,l) \\ effects: holding(k,c), \neg empty(k) $
+	\item no need for negative effects (closed world assumption), only when they are explicitly touched (AM?)
 	\end{itemize}
 	
 \item Action
 	\begin{itemize}
-	\item ground instance of operator
+	\item ground \textbf{instance} of operator
 	\end{itemize}
 	
 \item Notation
