changed to one column layout

--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -7,8 +7,7 @@
 %%% Preamble
 \documentclass[	DIV=calc,%
 							paper=a4,%
-							fontsize=11pt,%
-							twocolumn]{scrartcl}	 					% KOMA-article class
+							fontsize=11pt]{scrartcl}	 					% KOMA-article class
 
 \usepackage{lipsum}													% Package to create dummy text
 
