--- a/summary/sections/complexity_classical_planning.tex
+++ b/summary/sections/complexity_classical_planning.tex
@@ -14,13 +14,16 @@
 \item Runtime, space complexity
 
 \item \textbf{Restrictions of classical planning}
-\item Operators are fixed or input?
-\item Allow infinite initial states?*
-\item Allow function symbols?*
-\item Allow negative effects?
-\item Allow neg. preconditions?
-\item Allow >1 preconditions?
-\item Operators have conditional effects?*
+\begin{itemize}
+	\item Operators are fixed or input?
+	\item Allow infinite initial states?*	
+	\item Allow function symbols?*
+	\item Allow negative effects?
+	\item Allow neg. preconditions?
+	\item Allow >1 preconditions?
+	\item Operators have conditional effects?*
+\end{itemize}
+
 \item *: outside CP
 
 \item \textbf{(Un)decidability}
