added scheduling section

--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -128,5 +128,7 @@
 \section{Hierarchical Task Network Planning}
 \input{sections/hierarchical_task_network_planning}
 
+\section{Scheduling}
+\input{sections/scheduling}
 
 \end{document}
