--- a/whiteboard summary/summary.tex
+++ b/whiteboard summary/summary.tex
@@ -44,6 +44,7 @@ description={a particular form of sensory perception}}
 \caption{..}
 \label{ideas}
 \end{figure}
+
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=180mm]{img/3.jpg}
@@ -51,4 +52,29 @@ description={a particular form of sensory perception}}
 \caption{..}
 \label{ideas}
 \end{figure}
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=180mm]{img/6.jpg}
+\includegraphics[width=180mm]{img/7.jpg}
+\caption{..}
+\label{ideas}
+\end{figure}
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=180mm]{img/8.jpg}
+\includegraphics[width=180mm]{img/9.jpg}
+\caption{..}
+\label{ideas}
+\end{figure}
+
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=180mm]{img/10.jpg}
+\includegraphics[width=180mm]{img/11.jpg}
+\caption{..}
+\label{ideas}
+\end{figure}
+
 \end{document}
